--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body{
 .h-div--bars{
   opacity: 65%;
   width:25px;
-  margin-left:10px;
+  margin-left:0px;
 }
 .h-div img{
   position: absolute;
@@ -81,7 +81,7 @@ body{
   background:lightgray;
   padding: 5px;
   border-radius: 2px;
-  color: gray;
+  color: hsl(25, 100%, 60%);
   margin-left: 5%;
 }
 .m-div--list li:nth-of-type(3){
@@ -90,7 +90,7 @@ body{
     text-decoration: line-through;
 }
 .m-div-i{
-  opacity:65%;
+  opacity:85%;
   padding-right:20px;
 }
 .m-div button{
@@ -98,9 +98,10 @@ body{
   border:hsl(26, 100%, 55%);
   width: 100%;
   padding: 10px;
-  height: 25%;
+  height: 30%;
   border-radius: 3px;
   font-size:17px;
+  color: white;
 }
 @media screen and (max-width:500px)
 {
