--- a/src/style.css
+++ b/src/style.css
@@ -102,6 +102,11 @@ body{
   border-radius: 3px;
   font-size:17px;
   color: white;
+  font-weight: bold;
+}
+.m-div--mod li{
+  list-style: none;
+  display: inline-flex;
 }
 .m-div--mod{
   width: 98%;
@@ -109,19 +114,16 @@ body{
   padding: 3px;
   margin: 5px 1px;
   border-radius: 3px;
+  } 
+.m-div--mod-li:nth-of-type(1){
+  color: hsl(25, 100%, 60%);
+  margin-left: 5%;
+  margin-right: 10%;
 }
-.m-div--mod p{
-   margin-left:50% ;
-}
-.m-div--mod-minus{
-  position: absolute;
-  bottom: -235px;
-  left: 30%;
-}
-.m-div--mod-plus{
-  position: absolute;
-  right: 25%;
-   bottom: -235px;
+.m-div--mod-li:nth-of-type(3){
+   color: hsl(25, 100%, 60%);
+   margin-left: 10%;
+   margin-right: 5%;
 }
 @media screen and (max-width:500px)
 {
