--- a/src/style.css
+++ b/src/style.css
@@ -101,7 +101,7 @@ body{
   display: inline-flex;
 }
 .m-div--list li:nth-of-type(2){
-  background:lightgray;
+  background: hsl(223, 64%, 98%);
   padding: 5px;
   border-radius: 2px;
   color: hsl(25, 100%, 60%);
@@ -139,24 +139,28 @@ body{
 }
 .m-div--mod{
   width: 100%;
-  background-color: lightgray;
+  background-color:hsl(223, 64%, 98%) ;
   height: 50px;
   padding-top: 0px;
   margin: 5px 1px;
   border-radius: 3px;
   text-align: center;
+  font-weight: bold;
   } 
 .m-div--mod li:nth-of-type(1){
   color: hsl(25, 100%, 60%);
   margin-right:40%;
+  font-weight: bolder;
 }
 .m-div--mod li:nth-of-type(3){
    color: hsl(25, 100%, 60%);
    margin-left: 40%;
+   font-weight: bolder;
 }
 .m-div--mod li:nth-of-type(2){
   font-size: 20px;
 }
+/*media query*/
 @media screen and (max-width:500px)
 {
   .top-nav--wrapper li{
