--- a/src/style.css
+++ b/src/style.css
@@ -198,7 +198,7 @@ body{
     top: 40%;
   }
 }
-@media screen and (min-width:425px){
+@media screen and (min-width:510px) and (max-width:1440px) {
   .m-div{
     display: flex;
   }
@@ -208,8 +208,12 @@ body{
   .m-div--cont{
     width: 50%;
     margin-top: 10px;
+    padding-left: 15px;
   }
   .m-div--image-icons li{
     display: none;
+  }
+  .m-div--list li:nth-of-type(3){
+    margin-left: 20%;
   }
 }
