--- a/src/style.css
+++ b/src/style.css
@@ -100,8 +100,11 @@ body{
   list-style: none;
   display: inline-flex;
 }
+.m-div--list li:nth-of-type(1){
+  font-weight: bolder;
+}
 .m-div--list li:nth-of-type(2){
-  background: hsl(223, 64%, 98%);
+  background: hsl(25, 100%, 94%);
   padding: 5px;
   border-radius: 2px;
   color: hsl(25, 100%, 60%);
