--- a/src/style.css
+++ b/src/style.css
@@ -211,12 +211,20 @@ body{
   .m-div--cont{
     width: 50%;
     margin-top: 10px;
-    padding-left: 15px;
+    padding-left: 30px;
   }
   .m-div--image-icons li{
     display: none;
   }
   .m-div--list li:nth-of-type(3){
-    margin-left: 20%;
+    position: absolute;
+    margin-top: 40px;
+    left: -40px;
+  }
+  .m-div--list li:nth-of-type(1){
+    margin-left: -20px;
+  }
+  .h-div--bars{
+    display: none;
   }
 }
