--- a/src/style.css
+++ b/src/style.css
@@ -236,11 +236,11 @@ body{
   .m-div--mod{
     margin-top: 10px;
     position: absolute;
-    width: 80px;
-    left: 5px;
+    width: 200px;
+    left:40%;
   }
   .m-div button{
-    width: 100px;
+    width: 250px;
     position: absolute;
     right: 10px;
   }
