--- a/src/style.css
+++ b/src/style.css
@@ -236,12 +236,15 @@ body{
   .m-div--mod{
     margin-top: 10px;
     position: absolute;
-    width: 200px;
-    left:40%;
+    width: 140px;
+    left:49%;
   }
   .m-div button{
-    width: 250px;
+    width: 210px;
     position: absolute;
     right: 10px;
+  }
+  .m-div--mod li:nth-of-type(1),.m-div--mod li:nth-of-type(3){
+    margin:20px;
   }
 }
