--- a/src/style.css
+++ b/src/style.css
@@ -244,7 +244,16 @@ body{
     position: absolute;
     right: 10px;
   }
-  .m-div--mod li:nth-of-type(1),.m-div--mod li:nth-of-type(3){
-    margin:20px;
+  .m-div--mod li:nth-of-type(1){
+    margin-left:-5px;
   }
+  .m-div--mod li:nth-of-type(2){
+    margin-right: -12px;
+  }
+  .m-div--mod ul{
+    padding-top: 7px;
+    margin-top:0px;
+    
+  }
+
 }
