--- a/src/style.css
+++ b/src/style.css
@@ -68,8 +68,8 @@ body{
    position: absolute;
    top:50%;
    background: white;
-   padding:10px;
-   border-radius: 30px;
+   padding:4px 10px;
+   border-radius: 50px;
 
 }
 .m-div--image-icons li:nth-of-type(1){
