--- a/src/style.css
+++ b/src/style.css
@@ -68,7 +68,7 @@ body{
    position: absolute;
    top:50%;
    background: white;
-   padding:4px 10px;
+   padding:4px 8px;
    border-radius: 50px;
 
 }
@@ -125,7 +125,8 @@ body{
   width: 100%;
   padding: 10px;
   height: 50px;
-  border-radius: 3px;
+  border-radius: 5px;
+  box-shadow: 0px 5px 5px hsl(26, 100%, 75%);
   font-size:17px;
   color: white;
   font-weight: bold;
@@ -147,7 +148,7 @@ body{
   height: 50px;
   padding-top: 0px;
   margin: 5px 1px;
-  border-radius: 3px;
+  border-radius: 5px;
   text-align: center;
   font-weight: bold;
   } 
