--- a/src/style.css
+++ b/src/style.css
@@ -248,10 +248,13 @@ body{
     right: 10px;
   }
   .m-div--mod li:nth-of-type(1){
-    margin-left:-5px;
+    margin:auto;
+  }
+  .m-div--mod li:nth-of-type(3){
+    margin: auto;
   }
   .m-div--mod li:nth-of-type(2){
-    margin-right: -12px;
+    margin:auto 23%;
   }
   .m-div--mod ul{
     padding-top: 7px;
