--- a/src/style.css
+++ b/src/style.css
@@ -165,6 +165,11 @@ body{
 .m-div--mod li:nth-of-type(2){
   font-size: 20px;
 }
+.slider{
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+}
 /*media query*/
 @media screen and (max-width:500px)
 {
