--- a/src/style.css
+++ b/src/style.css
@@ -168,7 +168,24 @@ body{
 .slider{
   display: flex;
   width: 100%;
-  overflow: hidden;
+  overflow:;
+  animation: move-right 5s ease-in-out infinite alternate;
+  
+}
+
+@keyframes move-right{
+    25%{
+      transform: translateX(-200px);
+    }
+    50%{
+      transform: translateX(-400px);
+    }
+    75%{
+      transform:translateX(-600px)
+    }
+    100%{
+      transform: translateX(-800px);
+    }
 }
 /*media query*/
 @media screen and (max-width:500px)
