--- a/src/style.css
+++ b/src/style.css
@@ -183,13 +183,7 @@ body{
   
 }
 
-@keyframes move-right{
-    33%{
-      transform: translateX(-100%);
-    }
-  
-    
-}
+
 /*media query*/
 @media screen and (max-width:500px)
 {
@@ -229,15 +223,15 @@ body{
 }
 @media screen and (min-width:510px) and (max-width:1440px) {
   .m-div{
-    display: flex;
+    display:grid;
+    grid-template-columns:50% 50%;
   }
   .m-div--image{
-    width: 50%;
+    width: 100%;
   }
   .m-div--cont{
-    width: 50%;
-    margin-top: 30px;
     padding-left: 50px;
+    margin-top: 30px;
   }
   .m-div--image-icons li{
     display: none;
@@ -245,7 +239,7 @@ body{
   .m-div--list li:nth-of-type(3){
     position: absolute;
     margin-top: 40px;
-    left: -43px;
+    left: 12px;
   }
   .m-div--list li:nth-of-type(1){
     margin-left: -20px;
@@ -262,13 +256,13 @@ body{
   .m-div--mod{
     margin-top: 50px;
     position: absolute;
-    width: 140px;
-    left:49%;
+    width: 15%;
+    left:57%;
   
   }
   .m-div button{
     margin-top: 50px;
-    width: 210px;
+    width: 25%;
     position: absolute;
     right: 10px;
   }
