--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,20 @@ body{
   margin:5px -10px;
 
 }
+.h-div small{
+  background: hsl(25, 100%, 60%);
+  text-align: center;
+  font-size: xx-small;
+  border-radius: 30px;
+  height: 10px;
+  width: 10px;
+  padding: 3px;
+  justify-content: center;
+  position: absolute;
+  right:50px ;
+  top: 20px;
+  z-index: 2;
+}
 .h-div h3{
   font-size: 27px;
   font-weight: 700;
@@ -187,7 +201,7 @@ body{
 .h-div--cartview{
   width: 90%;
   position:absolute;
-  top:15%;33
+  top:15%;
   padding:10px ;
   background: white;
   border-radius: 5px;
@@ -196,6 +210,7 @@ body{
 }
 .h-div--cartview.visible{
     display: block;
+    z-index: 2;
 }
 .h-div--cartview h4{
   margin-left:4%;
