--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ body{
   margin:5px -10px;
 
 }
-.h-div small{
+.m-div small{
   background: hsl(25, 100%, 60%);
   text-align: center;
   font-size: xx-small;
