--- a/src/style.css
+++ b/src/style.css
@@ -202,6 +202,7 @@ body{
   width: 90%;
   position:absolute;
   top:15%;
+  left: 15px;
   padding:10px ;
   background: white;
   border-radius: 5px;
