--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,14 @@ body{
   margin:5px -10px;
 
 }
+.h-div button{
+  background:hsl(25, 100%, 60%);
+  border:1px solid hsl(25, 100%, 60%);
+  width: 100%;
+  padding: 10px;
+  margin-top: 50%;
+  border-radius: 3px;
+}
 .m-div small{
   background: hsl(25, 100%, 60%);
   text-align: center;
@@ -205,7 +213,7 @@ body{
   left: 15px;
   padding:10px ;
   background: white;
-  border-radius: 5px;
+  border-radius: px;
   height: 40%;
   display:none;
 }
