--- a/src/style.css
+++ b/src/style.css
@@ -24,8 +24,9 @@ body{
   border:1px solid hsl(25, 100%, 60%);
   width: 100%;
   padding: 10px;
-  margin-top: 50%;
+  margin-top: 0%;
   border-radius: 3px;
+  font-family: 'Kumbh sans';
 }
 .m-div small{
   background: hsl(25, 100%, 60%);
@@ -213,7 +214,7 @@ body{
   left: 15px;
   padding:10px ;
   background: white;
-  border-radius: px;
+  border-radius: 3px;
   height: 40%;
   display:none;
 }
